# wedjat

./: .dockerignore  .env.example  .gitignore  DETAILS.md  README.md  WEBSITE_PLAN.md  allium_errors.json  deploy_edge.sh  deploy_vps.sh  docker-compose.yml  justfile  pixi.toml  pyproject.toml  resolve.py  resolve_qwzkmsnk.py  resolve_zuwzswlk.py  satnogs-decoders_list.txt  summarize_ast.py  test_inference.py
.antigravitycli/: c4786aba-f7d9-419b-9a5b-00da2f62d780.json
.gemini/: GEMINI.md
docs/: ADDING_SATELLITES.md  DETAILS.md  WEBSITE_PLAN.md  architectural_audit_report.md  benchmark_43880.md  dataflow.typ  orbit_decay.md
frontend/: .dockerignore  Dockerfile  get_console_logs.ts  package.json  run_chrome.sh  screenshot_cta.ts  screenshot_dashboard.ts  screenshot_debug.ts  screenshot_landing.ts  screenshot_map.ts  screenshot_top.ts  svelte.config.js  tsconfig.json  vite.config.ts
models/: 43880_autoencoder.pkl  43880_envelope.pkl  43880_metadata.json  43880_scaler.pkl  43880_vae.pt
mosquitto/: Dockerfile  entrypoint.sh
notebooks/: sat_analysis.py
scripts/: convert_complex_to_short.py  edge_autotrack.py  fetch_tle_data.py  fetch_training_data.py  generate_faults.py  manage_keys.py  mock_sdr_stream.py  predict_passes.py  process_data.py  rtl_sdr_zmq_bridge.py  seed_database.py  test_uwe4_params.py  train_decay_model.py  train_model.py  wedjat_runtime.py
src/: RUNTIME_ERRORS.md
tests/: test_anomaly_detection_spec.py  test_api_ml.py  test_api_operations.py  test_dashboard_wss_spec.py  test_demodulators.py  test_formatters.py  test_ground_station_spec.py  (+4 more)
(+159 files in other folders)
