[project]
authors = [{name = "Mohamed-Badry", email = "m.badry.fl@gmail.com"}]
dependencies = []
name = "gr_sat"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/gr_sat"]

[tool.hatch.build.targets.sdist]
include = ["src/gr_sat", "pyproject.toml", "README.md"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gr_sat = { path = ".", editable = true }

[tool.pixi.tasks]
